virtualization/learning-kubernetes/subdomain-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  tls:
  - hosts:
    - analytics.host.com
    secretName: analytics-secret-tls
  rules:
  - host: analytics.host.com
    http:
      paths:
        backend:
          serviceName: analytics-service
          servicePort: 3000
  - host: shopping.host.com
    http:
      paths:
        backend:
          serviceName: shopping-service
          servicePort: 8080
